--- a/Linear_Function_approximation.ipynb
+++ b/Linear_Function_approximation.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h1 style=text-align:center>Linear Function Approximation</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Dependencies and settings"
    ]
   },
