--- a/cubicWithoutFramework.ipynb
+++ b/cubicWithoutFramework.ipynb
@@ -106,6 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# initialize weights and bias\n",
     "def initialize_parameters(layer_dims):\n",
     "\n",
     "    params = {}  # initialize a dictionary for storing parameters\n",
@@ -118,7 +119,21 @@
     "        assert(params['w'+str(l)].shape == (layer_dims[l], layer_dims[l-1])) # check the shape of weights\n",
     "        assert(params['b'+str(l)].shape == (layer_dims[l], 1)) # check the shape of bias\n",
     "\n",
-    "    return params\n"
+    "    return params\n",
+    "\n",
+    "def ReLU(Z):\n",
+    "    return np.maximum(Z, 0)\n",
+    "\n",
+    "# Forward propagation\n",
+    "\n",
+    "def forward_pg (A, W, b):\n",
+    "    Z = np.dot(W, A) + b # compute the linear combination\n",
+    "\n",
+    "    assert(Z.shape == (W.shape[0], A.shape[1])) # check the shape of linear combination\n",
+    "    cache = (A, W, b) # store the linear combination in cache\n",
+    "    \n",
+    "    return Z, cache\n",
+    "\n"
    ]
   },
   {
@@ -126,9 +141,7 @@
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "initial_parameters = initialize_parameters([8, 16, 1])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
