--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,11 +63,203 @@
     "    \n",
     "    return dZ"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: initialize_parameters\n",
+    "\n",
+    "def initialize_parameters(n_x, n_h, n_y):\n",
+    "\n",
+    "    \n",
+    "    np.random.seed(1)\n",
+    "    \n",
+    "    ### START CODE HERE ### (≈ 4 lines of code)\n",
+    "    W1 = np.random.randn(n_h, n_x)*0.01\n",
+    "    b1 = np.zeros((n_h,1))\n",
+    "    W2 = np.random.randn(n_y, n_h)*0.01\n",
+    "    b2 = np.zeros((n_y,1))\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    assert(W1.shape == (n_h, n_x))\n",
+    "    assert(b1.shape == (n_h, 1))\n",
+    "    assert(W2.shape == (n_y, n_h))\n",
+    "    assert(b2.shape == (n_y, 1))\n",
+    "    \n",
+    "    parameters = {\"W1\": W1,\n",
+    "                  \"b1\": b1,\n",
+    "                  \"W2\": W2,\n",
+    "                  \"b2\": b2}\n",
+    "    \n",
+    "    return parameters  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[ 0.01624345 -0.00611756]\n",
+      " [-0.00528172 -0.01072969]]\n",
+      "b1 = [[0.]\n",
+      " [0.]]\n",
+      "W2 = [[ 0.00865408 -0.02301539]]\n",
+      "b2 = [[0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters = initialize_parameters(2,2,1)\n",
+    "print(\"W1 = \" + str(parameters[\"W1\"]))\n",
+    "print(\"b1 = \" + str(parameters[\"b1\"]))\n",
+    "print(\"W2 = \" + str(parameters[\"W2\"]))\n",
+    "print(\"b2 = \" + str(parameters[\"b2\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: initialize_parameters_deep\n",
+    "\n",
+    "def initialize_parameters_deep(layer_dims):\n",
+    "\n",
+    "    np.random.seed(3)\n",
+    "    parameters = {}\n",
+    "    L = len(layer_dims)            # number of layers in the network\n",
+    "\n",
+    "    for l in range(1, L):\n",
+    "        ### START CODE HERE ### (≈ 2 lines of code)\n",
+    "        parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l-1]) * 0.01\n",
+    "        parameters['b' + str(l)] =  np.zeros((layer_dims[l], 1))\n",
+    "        ### END CODE HERE ###\n",
+    "        \n",
+    "        assert(parameters['W' + str(l)].shape == (layer_dims[l], layer_dims[l-1]))\n",
+    "        assert(parameters['b' + str(l)].shape == (layer_dims[l], 1))\n",
+    "\n",
+    "        \n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[ 0.01788628  0.0043651   0.00096497 -0.01863493 -0.00277388]\n",
+      " [-0.00354759 -0.00082741 -0.00627001 -0.00043818 -0.00477218]\n",
+      " [-0.01313865  0.00884622  0.00881318  0.01709573  0.00050034]\n",
+      " [-0.00404677 -0.0054536  -0.01546477  0.00982367 -0.01101068]]\n",
+      "b1 = [[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]]\n",
+      "W2 = [[-0.01185047 -0.0020565   0.01486148  0.00236716]\n",
+      " [-0.01023785 -0.00712993  0.00625245 -0.00160513]\n",
+      " [-0.00768836 -0.00230031  0.00745056  0.01976111]]\n",
+      "b2 = [[0.]\n",
+      " [0.]\n",
+      " [0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters = initialize_parameters_deep([5,4,3])\n",
+    "print(\"W1 = \" + str(parameters[\"W1\"]))\n",
+    "print(\"b1 = \" + str(parameters[\"b1\"]))\n",
+    "print(\"W2 = \" + str(parameters[\"W2\"]))\n",
+    "print(\"b2 = \" + str(parameters[\"b2\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_forward_test_case():\n",
+    "    np.random.seed(1)\n",
+    "    A = np.random.randn(3,2)\n",
+    "    W = np.random.randn(1,3)\n",
+    "    b = np.random.randn(1,1)\n",
+    "    return A, W, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: linear_forward\n",
+    "\n",
+    "def linear_forward(A, W, b):\n",
+    "\n",
+    "    \n",
+    "    ### START CODE HERE ### (≈ 1 line of code)\n",
+    "    Z = np.dot(W, A) + b\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    assert(Z.shape == (W.shape[0], A.shape[1]))\n",
+    "    cache = (A, W, b)\n",
+    "    \n",
+    "    return Z, cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = [[ 3.26295337 -1.23429987]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A, W, b = linear_forward_test_case()\n",
+    "\n",
+    "Z, linear_cache = linear_forward(A, W, b)\n",
+    "print(\"Z = \" + str(Z))"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "9c9f0b44d992d9c232ccf452f3e44e92f444eaede8697943331f9832892ced10"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.10 ('venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
